add part of the final code

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <header>
         <h1>To do list</h1>
       </header>
+
       <form id="todo-form">
         <p>Add your task</p>
         <div class="form-control">
@@ -36,8 +37,8 @@
             <i class="fa-thin fa-plus"></i>
           </button>
         </div>
-        <button id="cancel-edit-btn">Cancel</button>
       </form>
+
       <form id="edit-form" class="hidden">
         <p>Edit your task</p>
         <div class="form-control">
@@ -46,7 +47,9 @@
             <i class="fa-solid fa-check-double"></i>
           </button>
         </div>
+        <button id="cancel-edit-btn">Cancel</button>
       </form>
+
       <div id="toolbar">
         <div id="search">
           <h4>Search</h4>
@@ -66,7 +69,7 @@
           </select>
         </div>
       </div>
-      <div id="todlist">
+      <div id="todo-list">
         <div class="todo done">
           <h3>I am doing...</h3>
           <button class="finish-todo">
